Naftah - concurrency support - minor changes